build: 공통 모듈 세팅

--- a/com.fn.ai.delivery/build.gradle
+++ b/com.fn.ai.delivery/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	// 공통 모듈
+	implementation project(':com.fn.ai.common')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
