--- a/com.fn.ai.config/src/main/resources/config-repo/notification-service.yml
+++ b/com.fn.ai.config/src/main/resources/config-repo/notification-service.yml
@@ -4,3 +4,19 @@ server:
 spring:
   application:
     name: notification-service
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/slack
+    platform: postgres
+    username: sa
+    password: sa
+
+  jpa:
+    hibernate:
+      ddl-auto: update # When you launch the application for the first time - switch "none" at "create"
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
+    generate-ddl: true
